--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-# Core modules (mandatory)
-jupyterlite-core==0.2.2
-jupyterlab~=4.0.9
-notebook~=7.0.6
+# Core modules (mandatory) 
+jupyterlite-core==0.2.3
+jupyterlab~=4.0.11
+notebook~=7.0.7
 
 # Python kernel
-jupyterlite-pyodide-kernel==0.2.0
+jupyterlite-pyodide-kernel==0.2.3
 
 # JavaScript kernel
-jupyterlite-javascript-kernel==0.2.2
+jupyterlite-javascript-kernel==0.2.3
 
 # Language support (optional)
 jupyterlab-language-pack-fr-FR
@@ -50,3 +50,5 @@ nbformat
 pyodide_http
 haversine
 folium
+anywidget
+haversine
